DesignProject/tests/pass/test08_local_variables.src
// Focus: Local variable declarations
// Grammar: localVarDecl -> LOCAL varDecl

func test() => integer {
  local x : integer;
  local y : float;
  local arr : integer[10];
  return (0);
}

